--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    //implementation 'com.airbnb.android:lottie:4.1.0'
 }
